internal/kgateway/agentgatewaysyncer/testdata/inputs/tls-routing/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
  - allowedRoutes:
      kinds:
        - group: gateway.networking.k8s.io
          kind: TLSRoute
      namespaces:
        from: Same
    hostname: '*.example.com'
    name: https
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: tls-route
spec:
  hostnames:
    - abc.example.com
  parentRefs:
  - name: gateway-tlsroute
  rules:
  - backendRefs:
    - name: example-svc
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 443
      targetPort: test
